# predict_customer_churn

./: .env.example  Makefile  docker-compose.yml  pyproject.toml
docs/: eda.ipynb
keep/notebooks/: stats.ipynb  stats_churn.ipynb
notebooks/: s6e3-detail-eda-baseline-xgb-auc-0-91808.ipynb  s6e3-ridge-xgb-n-gram-0-91927-cv.ipynb
scripts/: up.sh
src/config/: mlflow_init.py
src/ensemble/: blender.py  config.py  features.py  optimizer.py  stacking.py  target_encoding.py  train.py
src/ensemble/level0/: catboost_.py  lightgbm_.py  ridge.py  xgboost_.py
src/models/: logistic_regression.py  model.py  svm.py
src/models/classification/: adaboost.py
src/preprocessing/: preprocess.py
src/utils/: generate_submission_file.py
